--- a/DesarrolloSocialWeb/Views/Home/ResponsabledeFamilia.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/ResponsabledeFamilia.cshtml
@@ -208,34 +208,33 @@
                 <input type="text" id="n°hijos" name="n°hijos" class="form form-control" />
              </div>
 
-
-  <div class="col-md-3 text-md-right">
-                <label class="control-label">¿Tiene alguna Discapacidad?</label>
+                <div class="col-md-8">
+                <label class="control-label">¿Tiene Alguna Discapacidad?</label>
           </div>
-
-          <div class="form-group row col-md-12">
-               <div class="col-md-5 text-md-left">
+            <div class="col-md-8">
             <select id="sexo"name="sexo" class="form-control form-control-sm">
                          <option value="0" disabled  selected >Seleccione...</option>
                          <option value="1">Si</option>
                          <option value="2">No</option>  
+                          
              </select>
+              </div>
+            
+             
+              <div class="col-md-8">
+            <select id="sexo"name="sexo" class="form-control form-control-sm">
+                         <option value="0" disabled  selected >Tipo</option>
+                         <option value="1">Psiquica (Mental, Intelectual)</option>
+                         <option value="2">Sensorial (Visual,Auditiva,Lenguaje)</option>  
+                         <option value="3">Física(Miembros)</option>  
+                         <option value="3">Mixta o PLuridefisiente</option>  
 
-             </div>
-
-             <div class="col-md- text-md-left">
-                <label class="control-label">colocarlaal lado</label>
-             <div class="col-md-7 text-md-right">
-                 <select id="sexo"name="sexo" class="form-control form-control-sm">
-                         <option value="0" disabled  selected >Seleccione...</option>
-                         <option value="1">Si</option>
-                         <option value="2">No</option>  
+        
+                         
              </select>
-             </div>
-
               </div>
+            
 
-              </div>
 
            <div class="col-md-8">
                 <label class="control-label">¿Tiene Tratamiento o Terapia?</label>
@@ -246,6 +245,9 @@
                          <option value="1">Si</option>
                          <option value="2">No</option>  
                           
+          
+      
+
              </select>
               </div>
             
