--- a/DesarrolloSocialWeb/Views/Home/Registro.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/Registro.cshtml
@@ -17,15 +17,15 @@
         <div class="form-horizontal" style="color:dD8CDCA">
 
                 <div class="col-md-3 text-md-right">
-                    <label class="control-label">Fecha de Registro</label>
+                    <label class="control-label" style=";font-weight:bold;font-size:16px;">Fecha de Registro</label>
                 </div>
-                <div class="col-md-8">                   
+                <div class="col-md-3">                   
                     <input type="date" id="fechaRegistro" name="fechaRegistro" class="form form-control" />
                 </div>
 
                 
                 <div class="col-md-3 text-md-right">
-                    <label class="control-label" style=";font-weight:bold;font-size:16px;">Dirección de Adomicilio</label>
+                    <label class="control-label" style=";font-weight:bold;font-size:16px;">Dirección de Domicilio</label>
                 </div>
 
 
@@ -123,11 +123,11 @@
 
                  <div class="form-group row col-md-12">
 
-        <div class="col-md-1 text-md-left">
+                <div class="col-md-1 text-md-left">
                     <input type="text" id="codigo" name="codigo" class="form form-control" placeholder="+58" />
                 </div>
 
-               <div class="col-md-7 text-md-right">
+               <div class="col-md-3 text-md-right">
                     <input type="text" id="telefono" name="telefono" class="form form-control" placeholder="424-331-21-31"/>
                 </div>
 
@@ -146,17 +146,17 @@
                     <input type="text" id="telefono.alternativo" name="telefono.alternativo" class="form form-control" placeholder="+58"  />
                 </div>
 
-                 <div class="col-md-7 text-md-right">
+                 <div class="col-md-3 text-md-right">
                     <input type="text" id="telefono.alternativo" name="telefono.alternativo" class="form form-control" placeholder="424-331-21-31" />
                 </div>
 
                  </div>
 
 
-                <div class="col-md-3 text-md-right">
+                <div class="col-md-4 text-md-right">
                     <label class="control-label">Correo Electronico</label>
                 </div>
-                  <div class="col-md-8">
+                  <div class="col-md-4">
                     <input type="email" id="correo" name="correo" class="form form-control" placeholder="example@gmail.com" /> 
                 </div>
 
