--- a/DesarrolloSocialWeb/Views/Shared/_Layout.cshtml
+++ b/DesarrolloSocialWeb/Views/Shared/_Layout.cshtml
@@ -25,15 +25,28 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Registro">Registro</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="CargaFamiliar">Carga Familiar</a>
+
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ResponsabledeFamilia">Responsable de Familia</a>
                         </li>
+
+                     
                          <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="CorredorHumanitario">Corredor Humanitario</a>
                         </li>
-                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ResponsabledeFamilia">Responsable de Familia</a>
+
+                           <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="CargaFamiliar">Carga Familiar</a>
                         </li>
+                         
+                          <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Vivienda">Vivienda</a>
+                        </li>
+
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="SoloParaUsodelGestorylaFundacion">Solo Para Uso del Gestor y la Fundación</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
