--- a/DesarrolloSocialWeb/Views/Home/CargaFamiliar.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/CargaFamiliar.cshtml
@@ -11,7 +11,7 @@
 
 <div class="card" style="margin-top:5%;">
     <div class="card-body">
-        <div class="form-horizontal" style="color:dimgray">
+        <div class="form-horizontal" style="color:dD8CDCA">
 
 
 
