--- a/DesarrolloSocialWeb/Views/Login/Index.cshtml
+++ b/DesarrolloSocialWeb/Views/Login/Index.cshtml
@@ -6,7 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 }
 <script>
-    var urlLogin = '@Url.Action("LoginGestor","Home")';
+    var urlLogin = '@Url.Action("LoginGestor","Login")';
     var urlRegistroGestor = '@Url.Action("RegistroGestor","About")';
 </script>
 
