--- a/DesarrolloSocialWeb/Views/Home/Registro.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/Registro.cshtml
@@ -33,7 +33,7 @@
                     <label class="control-label">País</label>
                 </div>
                   <div class="col-md-8">
-                    <select id="pais" name="pais" class="form-control form-control-sm"  onchange="    GetCiudadesPais();" required> 
+                    <select id="pais" name="pais" class="form-control form-control-sm"  onchange="GetCiudadesPais();" required> 
                     </select>
                 </div>
 
@@ -143,7 +143,7 @@
 
 
                   <div class="col-md-1 text-md-left">
-                    <input type="text" id="telefono.alternativo" name="telefono.alternativo" class="form form-control" placeholder="+58"  />
+                    <input type="text" id="codigo" name="codigo" class="form form-control" placeholder="+58"  />
                 </div>
 
                  <div class="col-md-3 text-md-right">
