--- a/DesarrolloSocialWeb/Views/Home/Vivienda.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/Vivienda.cshtml
@@ -34,7 +34,7 @@
                 <label class="control-label">Condición de la Vivienda</label>
           </div>
              <div class="col-md-8">
-            <select id="cviviend"name="cvivienda" class="form-control form-control-sm">
+            <select id="condicionVivienda"name="condicionVivienda" class="form-control form-control-sm">
                          <option value="0" disabled  selected >Seleccione...</option>
                          <option value="1">Muy Buena</option>
                          <option value="2">Buena</option>  
@@ -50,7 +50,7 @@
                 <label class="control-label">Requerimientos de la Vivienda</label>
           </div>
              <div class="col-md-8">
-            <select id="rviviend"name="rvivienda" class="form-control form-control-sm">
+            <select id="requerimientosVivienda"name="requerimientosVivienda" class="form-control form-control-sm">
                          <option value="0" disabled  selected >Seleccione...</option>
                          <option value="1">Ninguno</option>
                          <option value="2">Requiere Ampliación</option>  
@@ -66,7 +66,7 @@
                 <label class="control-label">Tenencia de la Vivienda</label>
           </div>
              <div class="col-md-8">
-            <select id="tviviend"name="tvivienda" class="form-control form-control-sm">
+            <select id="tenenciaVivienda"name="tenenciaVivienda" class="form-control form-control-sm">
                          <option value="0" disabled  selected >Seleccione...</option>
                          <option value="1">Propia</option>
                          <option value="2">Propia Pagándose</option>  
@@ -100,7 +100,7 @@
               <br/>
 
                 <div class="col-md-8">
-    <p align="right">Texto alineado a la derecha>  
+    <p align="right">  
 
         Yo,  <input type="text" id="nombre" name="nombre"/>, Nº de Identidad <input type="text" id="cedula" name="cedula"  />,acepto y doy fe que los datos antes descritos son verdaderos; la información ha sido suministrada de manera voluntaria y sin ningún tipo de coacción, cualquier variaci{on de la misma es mi responsabilidad notificarla. Firma <input type="text" id="nombreyapellido" name="nombreyapellido"/>
 (puño y letra del entrevistado en el caso de la planilla fisica.  Para el digital, solo se colocará el nombre y apellido del entrevistado)
