--- a/DesarrolloSocialWeb/Views/About/RegistroGestor.cshtml
+++ b/DesarrolloSocialWeb/Views/About/RegistroGestor.cshtml
@@ -16,7 +16,7 @@
 
 <div class="card" style="margin-top:5%;">
     <div class="card-body">
-        <div class="form-horizontal" style="color:dD8CDCA">
+        <div class="form-horizontal" style="color:black">
 
 
               <div class="col-md-3 text-md-right">
@@ -210,7 +210,7 @@
                   <br />
 
                  <div class="col-md-3 text-md-right">
-                    <input type="checkbox" id="confirmar" class="" form-check-input> <br>
+                    <input type="checkbox" id="confirmar" class="form-check-input" >  <br>
                 </div>
                 <div class="col-md-2">
                     <label class="control-label">Confirmar</label>
@@ -222,7 +222,7 @@
                     <input type="reset" value="Cancelar" class="btn btn-danger form-control" onclick="" style="width:300px;" />
                 </div>
                  <div class="col-md-6 tex-md-right">
-                    <input type="button" value="Guardar" class="btn btn-success form-control" onclick="ResgistroGestores();"style="width:300px;" />
+                    <input type="button" value="Guardar" class="btn btn-success form-control" onclick="RegistroGestores();"style="width:300px;" />
                 </div>
 
 
@@ -230,5 +230,5 @@
     </div> 
 </div>
    </div> 
-</div>
+
 
