--- a/DesarrolloSocialWeb/Views/Login/Index.cshtml
+++ b/DesarrolloSocialWeb/Views/Login/Index.cshtml
@@ -30,7 +30,7 @@
                 </div>
 
                 <div class="col-md-3 text-md-right">
-                    <input type="checkbox" id="confirmar" class="" form-check-input> <br>
+                    <input type="checkbox" id="confirmar" class="form-check-input" > <br>
                 </div>
                 <div class="col-md-2">
                     <label class="control-label">Confirmar</label>
