--- a/DesarrolloSocialWeb/Views/About/RegistroGestor.cshtml
+++ b/DesarrolloSocialWeb/Views/About/RegistroGestor.cshtml
@@ -210,7 +210,7 @@
                   <br />
 
                  <div class="col-md-3 text-md-right">
-                    <input type="checkbox" id="confirmar" class="form-check-input" >  <br>
+                    <input type="checkbox" id="confirmar" value="first_checkbox"> <br>
                 </div>
                 <div class="col-md-2">
                     <label class="control-label">Confirmar</label>
